--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://ThomD7.github.io/legendaires",
+  "homepage": ".",
   "name": "legendaires",
   "version": "0.1.0",
   "private": true,
