--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://thomd7.github.io/legendaires",
+  "homepage": "https://thomd7.github.io/legendaires/",
   "name": "legendaires",
   "version": "0.1.0",
   "private": true,
