--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "/legendaires/#",
+  "homepage": "legendaires/",
   "name": "legendaires",
   "version": "0.1.0",
   "private": true,
