--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "name": "legendaires",
   "version": "0.1.0",
   "private": true,
+  "proxy": "cors-anywhere-production-fed9.up.railway.app",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
